# apps/api-gateway/src/modules/students/students.controller.ts
@@ -1,7 +1,11 @@
-import { Body, Controller, Post } from '@nestjs/common';
+import { Body, Controller, Get, Param, Post } from '@nestjs/common';
 import { ApiTags } from '@nestjs/swagger';
 import { CoreHttpResponse } from '@sv-connect/core-common';
-import { CreateStudentBody, StudentDto } from '@sv-connect/core-domain';
+import {
+  CreateStudentBody,
+  GetStudentByAccountIdParam,
+  StudentDto,
+} from '@sv-connect/core-domain';
 import { StudentsService } from './students.service';
 
 @ApiTags('Students')
@@ -14,6 +18,16 @@ export class StudentsController {
     @Body() body: CreateStudentBody
   ): Promise<CoreHttpResponse<StudentDto>> {
     const { data } = await this.studentsService.createStudent(body);
+    return CoreHttpResponse.success({ data });
+  }
+
+  @Get('accounts/:accountId')
+  async getStudentByAccountId(
+    @Param() { accountId }: GetStudentByAccountIdParam
+  ): Promise<CoreHttpResponse<StudentDto>> {
+    const { data } = await this.studentsService.getStudentByAccountId(
+      accountId
+    );
     return CoreHttpResponse.success({ data });
   }
 }
